--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.6",
+    "uuidv4": "^6.2.12"
   }
 }
