--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,14 @@
 		"module": "commonjs",
 		"declaration": true,
 		"removeComments": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
 		"target": "es2017",
 		"sourceMap": true,
 		"outDir": "./dist",
-		"baseUrl": "./",
+		"baseUrl": "./src",
 		"incremental": true,
 		"skipLibCheck": true,
+		"moduleResolution": "node",
 		"esModuleInterop": true
 	}
 }
