--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc",
-    "start": "yarn build && node dist/server.js"
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
