--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "uuidv4": "^6.2.12"
   }
 }
